project-1/index.css
:root {
    --pink: #EFAEDE;
    --yellow: #F2F60F;
    --green: #AAD994;
    --purple: #5F2D77;
    --red: #F5302D;
    --blue: #1065A8;
    --olive: #ACAF22;
    --orange: #FF7251;
    --lilac: #EBDFED;
    --shell: #FBF2F2;


}


/* FONTS */ 

@font-face {
    font-family: "Avara-Italic";
    src: url("../fonts/Avara-BoldItalic.ttf");
}

@font-face {
    font-family: "Circular-Regular";
    src: url("../fonts/CircularXXTrial-Regular.otf");
}

@font-face {
    font-family: "GTPressura-ExtendedText";
    src: url(../fonts/GT-Pressura-Extended-Text-Trial.otf);
}


/* SET UP */

body { 
    background-color: var(--shell);
}
div {
    height: 50px;
    width: 100%;
    border-top: 1px black solid;
    border-bottom: 1px black solid;
}
.pink-path {
    background-color: var(--pink);
    transform: rotate(5deg);
    z-index: 1;
}

.yellow-path {
    background-color: var(--yellow);
    transform: rotate(-3deg);
    z-index: 2;
}

.green-path {
    background-color: var(--green);
    transform: rotate(.5deg);
    z-index: 9;
}

.red-path {
    background-color: var(--red);
    transform: rotate(7.5deg);
    z-index: 1;
}

.blue-path {
    background-color: var(--blue);
    transform: rotate(3deg);
}

.olive-path {
    background-color: var(--olive);
    transform: rotate(2deg);
    z-index: 3;
}

.purple-path {
    background-color: var(--purple);
    transform: rotate(15deg);
}

.orange-path {
    background-color: var(--orange);
    transform: rotate(-15deg);
}

.lilac-path {
    background-color: var(--lilac);
    transform: rotate(-5deg);
}

